--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -269,11 +269,23 @@
         />
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
 
-        />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/colorWhite"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/_5sdp"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
 </LinearLayout>
 
