--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="screenBackground">#f3f3f3</color>
 </resources>
