--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -44,27 +45,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.25"
+            android:layout_weight="2"
             android:orientation="horizontal"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilMobile"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 >
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/tieMobile"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/phone_no"
                     android:inputType="numberSigned"
                     android:maxLength="13"
                     android:maxLines="1"
-                    android:textSize="@dimen/_15sdp"/>
+                    android:textSize="@dimen/_12sdp"
+                    app:autoSizeMaxTextSize="@dimen/_14sdp"
+                    app:autoSizeMinTextSize="@dimen/_10sdp"
+                    app:autoSizeStepGranularity="0.2sp"
+                    app:autoSizeTextType="uniform"
+                    />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
@@ -84,25 +90,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2.25"
+            android:layout_weight="2"
             android:orientation="horizontal"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilEmail"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/tieEmail"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/email_address"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textEmailAddress|textNoSuggestions"
                     android:maxLength="30"
-                    android:textSize="@dimen/_15sdp"/>
+                    android:maxLines="1"
+                    android:textSize="@dimen/_12sdp"
+                    app:autoSizeMaxTextSize="@dimen/_14sdp"
+                    app:autoSizeMinTextSize="@dimen/_10sdp"
+                    app:autoSizeStepGranularity="0.2sp"
+                    app:autoSizeTextType="uniform"/>
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
@@ -112,10 +123,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.75"
-            android:text="@string/login"
+            android:text="@string/submit"
             android:gravity="center"
             android:textSize="@dimen/_16sdp"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/colorSemiBlack"
             android:textAllCaps="true"
             android:background="@drawable/bg_yellow_bg"
             android:textStyle="bold"
