--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#00695c</color>
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorSemiBlack">#404040</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
+    <color name="mtrl_textinput_default_box_stroke_color">#009987</color>
 </resources>
