--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -82,7 +82,7 @@
             android:text="@string/or"
             android:gravity="center"
             android:textSize="@dimen/_13sdp"
-            android:textColor="#000000"
+            android:textColor="@color/colorSemiBlack"
             android:textAllCaps="true"
 
             />
@@ -109,6 +109,7 @@
                     android:inputType="textEmailAddress|textNoSuggestions"
                     android:maxLength="30"
                     android:maxLines="1"
+                    android:imeOptions="actionDone"
                     android:textSize="@dimen/_12sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
@@ -129,7 +130,7 @@
             android:textColor="@color/colorSemiBlack"
             android:textAllCaps="true"
             android:background="@drawable/bg_yellow_bg"
-            android:textStyle="bold"
+
             />
 
     </LinearLayout>
