--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,5 +7,5 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
-    tools:context=".dashboard.view.DashboardActivity"
+    tools:context=".dashboard.DashboardActivity"
     android:id="@+id/frame1"/>
