--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item android:title="Home" />
-        <item android:title="Courses"/>
-        <item android:title="Projects"/>
-        <item android:title="Materials"/>
-        <item android:title="ContactUs"/>
+        <item android:id="@+id/action_dashboard" android:icon="@mipmap/ic_launcher" android:title="@string/dashboard"
+
+            />
+        <item android:icon="@mipmap/ic_launcher" android:title="@string/view_loan" />
 
     </group>
 
