--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00695c</color>
+    <color name="colorPrimaryLight">#009987</color>
     <color name="colorPrimaryDark">#00695c</color>
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
