--- a/app/src/main/res/drawable/bg_black_view.xml
+++ b/app/src/main/res/drawable/bg_black_view.xml
@@ -4,11 +4,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_25sdp" />
-            <stroke android:width="@dimen/_1sdp" android:color="#ffffff" />
-
-            <solid android:color="#A6000000" />
-
+            <stroke android:width="@dimen/_1sdp" android:color="@color/colorWhite" />
+            <solid android:color="@color/colorBlack" />
         </shape>
     </item>
-
 </selector>
