--- a/app/src/main/res/drawable/bg_yellow_bg.xml
+++ b/app/src/main/res/drawable/bg_yellow_bg.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_25sdp" />
-            <solid android:color="#f3bb25" />
+            <solid android:color="@color/colorYellow" />
         </shape>
     </item>
 </selector>
