--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorSemiBlack">#404040</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
+    <color name="colorYellow">#f3bb25</color>
     <color name="mtrl_textinput_default_box_stroke_color">#009987</color>
 </resources>
