--- a/app/src/main/res/drawable/bg_black_view.xml
+++ b/app/src/main/res/drawable/bg_black_view.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_25sdp" />
             <stroke android:width="@dimen/_1sdp" android:color="@color/colorWhite" />
-            <solid android:color="@color/colorBlack" />
+            <solid android:color="#A6000000" />
         </shape>
     </item>
 </selector>
