--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,6 +13,16 @@
        android:background="@color/colorAccent"
        >
 
+      <com.app.l_pesa.common.CommonTextRegular
+          android:id="@+id/txtName"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:maxLines="1"
+          android:ellipsize="end"
+          android:textSize="@dimen/_13sdp"
+          android:textColor="@color/colorWhite"
+          />
+
    </LinearLayout>
 
 </LinearLayout>
