--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,27 +2,57 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_75sdp"
+    android:layout_height="@dimen/_70sdp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
    >
 
-   <LinearLayout
+   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        >
 
+      <de.hdodenhof.circleimageview.CircleImageView
+          xmlns:app="http://schemas.android.com/apk/res-auto"
+          android:id="@+id/imgProfile"
+          android:layout_width="@dimen/_55sdp"
+          android:layout_height="@dimen/_55sdp"
+          android:src="@mipmap/ic_launcher"
+          app:civ_border_color="@color/colorAccent"
+          app:civ_border_width="@dimen/_2sdp"
+          android:layout_centerInParent="true"
+          android:layout_alignParentStart="true"
+          android:layout_marginStart="@dimen/_10sdp"/>
+
       <com.app.l_pesa.common.CommonTextRegular
           android:id="@+id/txtName"
+          android:layout_toEndOf="@+id/imgProfile"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:maxLines="1"
           android:ellipsize="end"
           android:textSize="@dimen/_13sdp"
+          android:layout_marginTop="@dimen/_20sdp"
+          android:layout_marginStart="@dimen/_3sdp"
           android:textColor="@color/colorWhite"
           />
 
-   </LinearLayout>
+      <com.app.l_pesa.common.CommonTextRegular
+          android:id="@+id/txtCreditScore"
+          android:layout_toEndOf="@+id/imgProfile"
+          android:layout_below="@+id/txtName"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:maxLines="1"
+          android:ellipsize="end"
+          android:textSize="@dimen/_12sdp"
+          android:layout_marginTop="@dimen/_2sdp"
+          android:layout_marginStart="@dimen/_3sdp"
+          android:textColor="@color/colorWhite"
+          android:text="@string/credit_score"
+          />
+
+   </RelativeLayout>
 
 </LinearLayout>
