--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,8 +19,8 @@
           android:layout_width="@dimen/_55sdp"
           android:layout_height="@dimen/_55sdp"
           android:src="@mipmap/ic_launcher"
-          app:civ_border_color="@color/colorAccent"
-          app:civ_border_width="@dimen/_2sdp"
+          app:civ_border_color="@color/screenBackground"
+          app:civ_border_width="@dimen/_1sdp"
           android:layout_centerInParent="true"
           android:layout_alignParentStart="true"
           android:layout_marginStart="@dimen/_10sdp"/>
