--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -18,8 +18,7 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/_15sdp"
-        android:layout_marginLeft="@dimen/_15sdp"
+        android:background="@color/colorAccent"
         >
 
         <RelativeLayout
@@ -28,6 +27,8 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15sdp"
+           android:background="@color/colorWhite"
          >
 
             <ImageView
@@ -53,19 +54,20 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="1dp"
+            android:layout_width="@dimen/_1sdp"
             android:layout_height="match_parent"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:background="@color/colorAccent"
 
             >
 
             <LinearLayout
-                android:layout_width="1dp"
+                android:layout_width="@dimen/_1sdp"
                 android:layout_height="match_parent"
-
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
+                android:background="@color/colorAccent"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:layout_marginBottom="@dimen/_4sdp"
                 android:layout_centerInParent="true">
 
             </LinearLayout>
@@ -78,8 +80,9 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:background="@color/colorWhite"
             android:gravity="center"
+            android:layout_marginEnd="@dimen/_15sdp"
             >
 
             <ImageView
