--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    >
     <RelativeLayout
         android:id="@+id/top_bar_dashboard"
         android:background="@color/colorAccent"
@@ -223,4 +228,5 @@
     </RelativeLayout>
 
 </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
 
