--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorApp">#00695c</color>
     <color name="colorBlack">#000000</color>
     <color name="colorSemiBlack">#404040</color>
+    <color name="colorLightBlack">#d9d9d9</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
     <color name="colorYellow">#f3bb25</color>
