--- a/app/src/main/res/layout/fragment_actionbar.xml
+++ b/app/src/main/res/layout/fragment_actionbar.xml
@@ -11,16 +11,18 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back_arrow"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/_3sdp" />
+         />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/_14sdp"
+        android:textSize="@dimen/_13sdp"
         android:text="@string/app_name"
-        android:gravity="center"
+        android:layout_toEndOf="@+id/back"
+        android:layout_marginStart="@dimen/_8sdp"
+
         />
 
 </RelativeLayout>
