--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -33,7 +33,10 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal"
-            tools:ignore="NestedWeights">
+            tools:ignore="NestedWeights"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp">
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/tilCurrentPassword"
@@ -66,7 +69,9 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal"
-            tools:ignore="NestedWeights">
+            tools:ignore="NestedWeights"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilNewPassword"
@@ -98,7 +103,9 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="horizontal"
-            tools:ignore="NestedWeights">
+            tools:ignore="NestedWeights"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilConfirmNewPassword"
