--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -21,9 +21,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="6"
+        android:layout_weight="3"
         android:orientation="vertical"
-        android:weightSum="10"
+        android:weightSum="7"
         android:background="@drawable/bg_white_view"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp">
@@ -43,6 +43,7 @@
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:passwordToggleEnabled="true"
                     >
 
                     <android.support.design.widget.TextInputEditText
@@ -78,6 +79,7 @@
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true"
                 >
 
                 <android.support.design.widget.TextInputEditText
@@ -86,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/new_password"
                     android:inputType="textPassword"
-                    android:maxLength="20"
+                    android:maxLength="16"
                     android:maxLines="1"
                     android:textSize="@dimen/_12sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
@@ -120,7 +122,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/confirm_new_password"
                     android:inputType="textPassword"
-                    android:maxLength="20"
+                    android:maxLength="16"
                     android:maxLines="1"
                     android:textSize="@dimen/_12sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
@@ -129,6 +131,126 @@
                     app:autoSizeTextType="uniform"
                     />
             </android.support.design.widget.TextInputLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".50"
+        android:orientation="vertical"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:background="@drawable/bg_white_view"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp">
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/colorSemiBlack"
+            android:text="@string/password_should"
+            android:padding="@dimen/_3sdp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            >
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_rule_one"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/colorRed"
+                android:text="@string/password_rule_one"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            >
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_rule_two"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/colorRed"
+                android:text="@string/password_rule_two"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            >
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_rule_three"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/colorRed"
+                android:text="@string/password_rule_three"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            >
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_rule_four"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/colorRed"
+                android:text="@string/password_rule_four"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            >
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txt_rule_five"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sdp"
+                android:textColor="@color/colorRed"
+                android:text="@string/password_rule_five"
+                />
 
         </LinearLayout>
 
