--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -41,14 +41,14 @@
                 <android.support.design.widget.TextInputLayout
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     app:passwordToggleEnabled="true"
                     >
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/etCurrentPassword"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:hint="@string/current_password"
                         android:inputType="textPassword"
                         android:maxLength="20"
@@ -75,14 +75,14 @@
             <android.support.design.widget.TextInputLayout
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:passwordToggleEnabled="true"
                 >
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etNewPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:hint="@string/new_password"
                     android:inputType="textPassword"
                     android:maxLength="16"
@@ -110,13 +110,13 @@
                 android:id="@+id/tilConfirmNewPassword"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 >
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etConfirmNewPassword"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:hint="@string/confirm_new_password"
                     android:inputType="textPassword"
                     android:maxLength="16"
