--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorSemiBlack">#404040</color>
     <color name="colorGrey">#bfbfbf</color>
+    <color name="colorGreyDeep">#949ba6</color>
     <color name="colorLightBlack">#d9d9d9</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
