--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -21,9 +21,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.5"
+        android:layout_weight="4.25"
         android:orientation="vertical"
-        android:weightSum="8"
+        android:weightSum="7.50"
         android:background="@drawable/bg_white_view"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp">
@@ -31,7 +31,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.85"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
             android:layout_marginTop="@dimen/_10sdp"
@@ -51,13 +51,14 @@
                         android:layout_height="match_parent"
                         android:hint="@string/current_password"
                         android:inputType="textPassword"
-                        android:maxLength="20"
+                        android:maxLength="16"
                         android:maxLines="1"
-                        android:textSize="@dimen/_12sdp"
+                        android:textSize="@dimen/_13sdp"
                         app:autoSizeMaxTextSize="@dimen/_14sdp"
                         app:autoSizeMinTextSize="@dimen/_10sdp"
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
+                        android:textColorHint="@color/colorGreyDeep"
                         />
                 </android.support.design.widget.TextInputLayout>
 
@@ -66,7 +67,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.85"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
@@ -87,11 +88,12 @@
                     android:inputType="textPassword"
                     android:maxLength="16"
                     android:maxLines="1"
-                    android:textSize="@dimen/_12sdp"
+                    android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
+                    android:textColorHint="@color/colorGreyDeep"
                     />
             </android.support.design.widget.TextInputLayout>
 
@@ -100,7 +102,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.85"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
@@ -121,20 +123,29 @@
                     android:inputType="textPassword"
                     android:maxLength="16"
                     android:maxLines="1"
-                    android:textSize="@dimen/_12sdp"
+                    android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
                     app:autoSizeMinTextSize="@dimen/_10sdp"
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
+                    android:textColorHint="@color/colorGreyDeep"
                     />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight=".25"
+
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.25"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
@@ -168,6 +179,7 @@
                 android:textColor="@color/colorSemiBlack"
                 android:text="@string/cancel"
                 android:textAllCaps="true"
+
                 />
 
         </LinearLayout>
