--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -129,6 +129,7 @@
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
+                    android:imeOptions="actionDone"
                     />
             </android.support.design.widget.TextInputLayout>
 
