--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorPrimaryDark">#00695c</color>
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
-    <color name="colorAppDeep">#001a17</color>
+    <color name="colorAppDeep">#016A5D</color>
+    <color name="colorAppLight">#47C9B7</color>
     <color name="colorBlack">#000000</color>
     <color name="colorSemiBlack">#404040</color>
     <color name="colorGrey">#bfbfbf</color>
@@ -15,5 +16,5 @@
     <color name="screenBackground">#f3f3f3</color>
     <color name="colorYellow">#f3bb25</color>
     <color name="colorRed">#ef3f3f</color>
-    <color name="mtrl_textinput_default_box_stroke_color">#009987</color>
+    <color name="mtrl_textinput_default_box_stroke_color">#949BA6</color>
 </resources>
