--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -34,18 +34,19 @@
             android:layout_weight="1.85"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_7sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tilCurrentPassword"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:passwordToggleEnabled="true"
                     >
 
-                    <android.support.design.widget.TextInputEditText
+                    <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etCurrentPassword"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -70,10 +71,12 @@
             android:layout_weight="1.85"
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
+            android:layout_marginTop="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/tilNewPassword"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -106,7 +109,8 @@
             android:orientation="horizontal"
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp">
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tilConfirmNewPassword"
@@ -177,7 +181,7 @@
                 android:layout_weight=".45"
                 android:background="@drawable/bg_grey_view"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorSemiBlack"
+                android:textColor="@color/colorGreyDeep"
                 android:text="@string/cancel"
                 android:textAllCaps="true"
 
