--- a/app/src/main/res/drawable/bg_grey_view.xml
+++ b/app/src/main/res/drawable/bg_grey_view.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_3sdp" />
-            <solid android:color="@color/colorGrey" />
+            <solid android:color="@color/colorGreyLight" />
         </shape>
     </item>
 </selector>
