--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -38,7 +38,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
-                <android.support.design.widget.TextInputLayout
+            <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/tilCurrentPassword"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                         app:autoSizeTextType="uniform"
                         android:textColorHint="@color/colorGreyDeep"
                         />
-                </android.support.design.widget.TextInputLayout>
+            </com.app.l_pesa.common.CommonInputLayout>
 
         </LinearLayout>
 
@@ -75,7 +75,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp">
 
-            <android.support.design.widget.TextInputLayout
+            <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/tilNewPassword"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
@@ -98,7 +98,7 @@
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
                     />
-            </android.support.design.widget.TextInputLayout>
+            </com.app.l_pesa.common.CommonInputLayout>
 
         </LinearLayout>
 
@@ -112,7 +112,7 @@
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_2sdp">
 
-            <android.support.design.widget.TextInputLayout
+            <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/tilConfirmNewPassword"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
@@ -135,7 +135,7 @@
                     android:textColorHint="@color/colorGreyDeep"
                     android:imeOptions="actionDone"
                     />
-            </android.support.design.widget.TextInputLayout>
+            </com.app.l_pesa.common.CommonInputLayout>
 
         </LinearLayout>
 
@@ -155,6 +155,7 @@
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp"
             android:weightSum="1">
 
             <com.app.l_pesa.common.CustomButtonRegular
