--- a/app/src/main/res/drawable/bg_drawer_item.xml
+++ b/app/src/main/res/drawable/bg_drawer_item.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:left="@dimen/_7sdp" android:right="@dimen/_2sdp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryLight"/>
+            <solid android:color="@color/colorSemiLightBlack"/>
         </shape>
     </item>
     <item android:bottom="@dimen/_1sdp">
