--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -44,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:passwordToggleEnabled="true"
+                    android:layout_marginTop="@dimen/_2sdp"
                     >
 
                     <com.app.l_pesa.common.CommonEditTextRegular
