--- a/app/src/main/res/layout/content_change_pin.xml
+++ b/app/src/main/res/layout/content_change_pin.xml
@@ -115,6 +115,7 @@
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_2sdp"
                 >
 
                 <com.app.l_pesa.common.CommonEditTextRegular
