--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -61,6 +61,7 @@
                         app:autoSizeStepGranularity="0.2sp"
                         app:autoSizeTextType="uniform"
                         android:textColorHint="@color/colorGreyDeep"
+                        android:longClickable="false"
                         />
             </com.app.l_pesa.common.CommonInputLayout>
 
@@ -98,6 +99,7 @@
                     app:autoSizeStepGranularity="0.2sp"
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
+                    android:longClickable="false"
                     />
             </com.app.l_pesa.common.CommonInputLayout>
 
@@ -135,6 +137,7 @@
                     app:autoSizeTextType="uniform"
                     android:textColorHint="@color/colorGreyDeep"
                     android:imeOptions="actionDone"
+                    android:longClickable="false"
                     />
             </com.app.l_pesa.common.CommonInputLayout>
 
