--- a/app/src/main/res/layout/snackbar_success.xml
+++ b/app/src/main/res/layout/snackbar_success.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:gravity="center"
     android:id="@+id/rlRoot"
+    android:background="@color/colorPrimaryLight"
     android:layout_height="wrap_content"
     android:padding="@dimen/_5sdp"
     >
@@ -12,7 +13,7 @@
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_error"
+        android:src="@drawable/ic_success"
         android:layout_marginStart="@dimen/_3sdp"
 
         />
